Some O2uk layout fixes - reducing height of gap between logo

--- a/src/main/webapp/studio/static/themes/o2uk/css/theme.css
+++ b/src/main/webapp/studio/static/themes/o2uk/css/theme.css
@@ -20,7 +20,7 @@ button {
 }
 
 #main_layout_center {
-  top: 95px !important;
+  top: 35px !important;
 }
 
 /* changes to allow the preview to be seen on mac book air size screen */
@@ -166,17 +166,14 @@ html, body {
 /*Tab Border */
 #main_layout_center .ui-tabs-nav li
 {
-  border:none;
   height: 35px;
   background:none!important;
-  background: #153064 !important;
-  background: -moz-linear-gradient(top, #153064 0%, #153064 100%)!important;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#153064), color-stop(100%,#153064))!important;
-  background: -webkit-linear-gradient(top, #153064 0%,#153064 100%)!important;
-  background: -o-linear-gradient(top, #153064 0%,#153064 100%)!important;
-  background: -ms-linear-gradient(top, #153064 0%,#153064 100%)!important;
-  background: linear-gradient(top, #153064 0%,#153064 100%)!important;
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#153064', endColorstr='#153064',GradientType=0 )!important;
+  background: #004791 !important;
+  border: none !important;
+}
+
+#main_layout_center .ui-tabs-nav li.ui-state-active {
+  border-color: #fff;
 }
 
 #main_layout_center .ui-tabs-nav li.ui-state-hover.ui-state-active a {
